--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "type": "git",
     "url": "https://github.com/m1ome/ordo"
   },
+	"engines": {
+		"node": ">=4"
+	},
   "author": {
     "name": "Pavel Makarenko",
     "email": "cryfall@gmail.com"
