--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "email": "cryfall@gmail.com"
   },
   "scripts": {
-    "test": "xo && nyc ava",
+    "test": "xo && nyc ava -s",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
