--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "ava": "^0.17.0",
+    "coveralls": "^2.11.15",
     "nyc": "^10.0.0",
     "sinon": "^1.17.6",
     "xo": "^0.17.1"
